In case when we can't find end or alternative end of extended event pattern then we copy start line to end line of resulting event

--- a/config_samples/BackupServiceParseConfig.json
+++ b/config_samples/BackupServiceParseConfig.json
@@ -37,8 +37,8 @@
 					"AltColor" : "800000",
 					"AltEnd" : 
 					{
-						"Data" : "[TenantBackupProcessor] Session completed with errors",
-						"Type" : "String"
+						"Data" : "(\\[TenantBackupProcessor\\] Session completed with errors)|(\\[TenantBackupProcessor\\] Session failed)",
+						"Type" : "RegExp"
 					},
 					"EndPattern" : 
 					{
